--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/index.css" />
     <script type="module" defer src="./index.js"></script>
-    <title>Document</title>
+    <title>Rick and Morty Home</title>
   </head>
   <body>
-    <button data-js="Button" class="Button">
-      Click me and go to the console.
-    </button>
+    <header class="header1">
+      <h1 class="header_rickAndMorty">Rick and Morty</h1>
+    </header>
+    <main></main>
+    <nav class="navbar__main">
+      <a class="navbar__text" href="">Character</a>
+      <a class="navbar__text" href="">Location</a>
+      <a class="navbar__text" href="">Episode</a>
+    </nav>
   </body>
 </html>
