--- a/pages/charactercard/index.html
+++ b/pages/charactercard/index.html
@@ -11,19 +11,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/components/charactercard/charactercard.css" />
+    <link rel="stylesheet" href="/pages/charactercard/charactercard.css" />
     <script src="/scripts/charactercards.js" defer></script>
     <title>Character Card</title>
   </head>
   <body>
-    <section id="characters" data-js="characters">
-      <figure class="character__card" data-js="character__card">
-        <img
-          src="https://rickandmortyapi.com/api/character/avatar/143.jpeg"
-          alt="variable"
-        />
-        <figcaption>Glasses Morty</figcaption>
-      </figure>
-    </section>
+    <section class="character__figures" data-js="characters"></section>
   </body>
 </html>
