Some styles for character details card

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     />
     <link rel="stylesheet" href="./styles/index.css" />
     <script type="module" defer src="./index.js"></script>
+    <script type="module" defer src="./scripts/charactercards.js "></script>
+
     <title>Rick and Morty Home</title>
   </head>
   <body>
     <header class="header1">
       <h1 class="header_rickAndMorty">Rick and Morty</h1>
     </header>
-    <main></main>
+    <main>
+      <section class="character__figures" data-js="characters"></section>
+    </main>
     <nav class="navbar__main">
       <a class="navbar__text" href="">Character</a>
       <a class="navbar__text" href="">Location</a>
