--- a/pages/characterDetails/index.html
+++ b/pages/characterDetails/index.html
@@ -13,42 +13,44 @@
     <title>CharacterDetails</title>
   </head>
   <body>
-    <section class="character__details">
-      <div class="character__mainDetails">
-        <img
-          src="https://rickandmortyapi.com/api/character/avatar/165.jpeg"
-          alt=""
-        />
-        <h2>character name</h2>
-        <h3>location</h3>
-        <h3>episode</h3>
-      </div>
-      <div class="character__secondaryDetails">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-          voluptates veritatis recusandae voluptatem porro beatae! Earum
-          similique aliquam sapiente illo, voluptatibus rem fuga consectetur
-          tenetur asperiores, debitis vel, porro provident!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-          voluptates veritatis recusandae voluptatem porro beatae! Earum
-          similique aliquam sapiente illo, voluptatibus rem fuga consectetur
-          tenetur asperiores, debitis vel, porro provident!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-          voluptates veritatis recusandae voluptatem porro beatae! Earum
-          similique aliquam sapiente illo, voluptatibus rem fuga consectetur
-          tenetur asperiores, debitis vel, porro provident!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-          voluptates veritatis recusandae voluptatem porro beatae! Earum
-          similique aliquam sapiente illo, voluptatibus rem fuga consectetur
-          tenetur asperiores, debitis vel, porro provident!
-        </p>
-      </div>
-    </section>
+    <main>
+      <section class="character__details">
+        <div class="character__mainDetails">
+          <img
+            src="https://rickandmortyapi.com/api/character/avatar/165.jpeg"
+            alt=""
+          />
+          <h2>character name</h2>
+          <h3>location</h3>
+          <h3>episode</h3>
+        </div>
+        <div class="character__secondaryDetails">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            voluptates veritatis recusandae voluptatem porro beatae! Earum
+            similique aliquam sapiente illo, voluptatibus rem fuga consectetur
+            tenetur asperiores, debitis vel, porro provident!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            voluptates veritatis recusandae voluptatem porro beatae! Earum
+            similique aliquam sapiente illo, voluptatibus rem fuga consectetur
+            tenetur asperiores, debitis vel, porro provident!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            voluptates veritatis recusandae voluptatem porro beatae! Earum
+            similique aliquam sapiente illo, voluptatibus rem fuga consectetur
+            tenetur asperiores, debitis vel, porro provident!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            voluptates veritatis recusandae voluptatem porro beatae! Earum
+            similique aliquam sapiente illo, voluptatibus rem fuga consectetur
+            tenetur asperiores, debitis vel, porro provident!
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
