Add fetching of character details in characterDetails.js

--- a/pages/characterDetails/index.html
+++ b/pages/characterDetails/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <main>
-      <section class="character__details">
-        <div class="character__details--frame">
+      <section class="character__details" data-js="character__details">
+        <!-- <div class="character__details--frame">
           <img
             src="https://rickandmortyapi.com/api/character/avatar/165.jpeg"
             alt=""
@@ -49,7 +49,7 @@
               tenetur asperiores, debitis vel, porro provident!
             </p>
           </div>
-        </div>
+        </div> -->
       </section>
     </main>
   </body>
