Change nav names to plural

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <script type="module" defer src="./index.js"></script>
 
-    <title>Rick and Morty Home</title>
+    <title>Rick and Morty</title>
   </head>
   <body>
     <header class="header1">
@@ -41,9 +41,9 @@
       </section>
     </main>
     <nav class="navbar__main">
-      <a class="navbar__text" data-js="navCharacter">Character</a>
-      <a class="navbar__text" data-js="navLocation">Location</a>
-      <a class="navbar__text" data-js="navEpisode">Episode</a>
+      <a class="navbar__text" data-js="navCharacter">Characters</a>
+      <a class="navbar__text" data-js="navLocation">Locations</a>
+      <a class="navbar__text" data-js="navEpisode">Episodes</a>
     </nav>
   </body>
 </html>
