Add section with character__details in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     </header>
     <main>
       <section class="character__figures" data-js="characters"></section>
+      <section
+        class="character__details"
+        data-js="character__details"
+      ></section>
       <!-- Location -->
       <section class="locations" data-js="locations" hidden></section>
       <section class="locationdetails" data-js="locationdetails" hidden>
